--- a/lab1/pom.xml
+++ b/lab1/pom.xml
@@ -25,6 +25,13 @@
 
     <!-- PLACE YOUR DEPENDENCIES HERE -->
 
+<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+    <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.8.6</version>
+    </dependency>
+
 
 
 
